[package]
name = "spsc"
version = "0.1.0"
edition = "2024"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "ISC OR MIT OR Apache-2.0"
rust-version = "1.88.0"
repository = "https://github.com/Kijewski/spsc"
description = "An entangled sync sender + async receiver pair."
keywords = ["async", "spsc", "channel", "future", "concurrency"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pin-project-lite = "0.2.0"

[dev-dependencies]
pollster = "0.4.0"
smol = "2.0.0"
tokio = { version = "1.51.0", features = ["macros", "rt", "time"] }
waker-fn = "1.2.0"

[lints.rust]
unknown_lints = { level = "allow", priority = -1 }
unsafe_code = { level = "forbid", priority = -1 }

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
rust_2024_compatibility = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_results = "warn"
warnings = "warn"

[lints.clippy]
collapsible_match = "warn"
expect_used = "warn"
match_bool = "warn"
match_ref_pats = "warn"
match_same_arms = "warn"
match_single_binding = "warn"
needless_bool = "deny"
needless_late_init = "warn"
needless_match = "warn"
redundant_guards = "warn"
redundant_pattern = "warn"
redundant_pattern_matching = "warn"
single_match = "warn"
single_match_else = "warn"
unwrap_used = "warn"
